--- a/client/templates/product_detail.html
+++ b/client/templates/product_detail.html
@@ -47,6 +47,6 @@
         <p>&copy; 2024 Rov Store. All rights reserved.</p>
     </footer>
 
-    <script src="{{ url_for('static', filename='scripts/javascript.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/product_detail.js') }}"></script>
 </body>
 </html>
