--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rov Store</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
             <div class="admin-section">
                 <p id="admin-username" style="display: none; margin-right: 10px;"></p>
                 <form id="logout-form" action="{{ url_for('admin_logout') }}" method="POST" style="display: none;">
-                    <button type="submit" class="logout-button" onclick="logout()">Logout</button>
-                </form>
+                    <button type="button" class="logout-button" onclick="logout()">Logout</button>
+                </form>                
             </div>
         </div>
     </header>           
